--- a/NoteBooks Draft/R0-CSV to GeoJSON.ipynb
+++ b/NoteBooks Draft/R0-CSV to GeoJSON.ipynb
@@ -277,6 +277,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "US-LIN\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(df.shape[0]):\n",
+    "    if df['Site'][i] == 'US-LIN':\n",
+    "        print(df['Site'][i])\n",
+    "        temp_GDF_4326 = gpd.GeoDataFrame(\n",
+    "            pd.DataFrame({\n",
+    "                \"Site\": [\"San Rossore\"],\n",
+    "            }),\n",
+    "            geometry = gpd.points_from_xy([df['Longitude'][i]], [df['Latitude'][i]]),\n",
+    "            crs = \"EPSG:4326\"\n",
+    "        )\n",
+    "        if df['Site'][i] == 'INDONESIA':    # Indonesia is a bit strange, so we make it an exception. \n",
+    "            temp_GDF_32632 = temp_GDF_4326.to_crs(\"EPSG:23830\")\n",
+    "            print(\"INDONESIA!\")\n",
+    "        else:\n",
+    "            temp_GDF_32632 = temp_GDF_4326.to_crs(\"EPSG:32632\")\n",
+    "        temp_GDF_32632_Buffer = temp_GDF_32632.copy().buffer(100, cap_style = 3)\n",
+    "        temp_GDF_4326_Buffer = temp_GDF_32632_Buffer.to_crs(\"EPSG:4326\")\n",
+    "        temp_GDF_4326_Buffer.to_file(cwd_Images_Processed + \"\\\\\" + df['Site'][i] + \"\\\\buffer_100m_4326.json\", driver = \"GeoJSON\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
