--- a/NoteBooks Draft/R1-L1C L2A and NIRv Rad.ipynb
+++ b/NoteBooks Draft/R1-L1C L2A and NIRv Rad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,18 +45,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Site Name\n",
-    "site_Name = \"Tapajos KM67 Mature Forest site\"\n",
-    "site_Name_New = \"Tapajos KM67 Mature Forest site\""
+    "site_Name = \"Robson Creek rainforest\"\n",
+    "site_Name_New = \"Robson Creek rainforest\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -110,20 +110,20 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Tapajos KM67 Mature Forest site</td>\n",
-       "      <td>-2.8567</td>\n",
-       "      <td>-54.9589</td>\n",
+       "      <td>Robson Creek rainforest</td>\n",
+       "      <td>-17.127134</td>\n",
+       "      <td>145.607253</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                              Site  Latitude  Longitude\n",
-       "0  Tapajos KM67 Mature Forest site   -2.8567   -54.9589"
+       "                      Site   Latitude   Longitude\n",
+       "0  Robson Creek rainforest -17.127134  145.607253"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -172,24 +172,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Tapajos KM67 Mature Forest site</td>\n",
-       "      <td>-2.8567</td>\n",
-       "      <td>-54.9589</td>\n",
-       "      <td>POINT (-54.9589 -2.8567)</td>\n",
+       "      <td>Robson Creek rainforest</td>\n",
+       "      <td>-17.127134</td>\n",
+       "      <td>145.607253</td>\n",
+       "      <td>POINT (145.60725 -17.12713)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                              Site  Latitude  Longitude  \\\n",
-       "0  Tapajos KM67 Mature Forest site   -2.8567   -54.9589   \n",
-       "\n",
-       "                   geometry  \n",
-       "0  POINT (-54.9589 -2.8567)  "
+       "                      Site   Latitude   Longitude                     geometry\n",
+       "0  Robson Creek rainforest -17.127134  145.607253  POINT (145.60725 -17.12713)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,16 +211,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\Tapajos KM67 Mature Forest site\\\\L1C\\\\S2B_MSIL1C_20230819T135709_N0509_R067_T21MYS_20230819T172029.SAFE\\\\GRANULE\\\\L1C_T21MYS_A033698_20230819T135707\\\\IMG_DATA\\\\T21MYS_20230819T135709_B08.jp2'"
+       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\Robson Creek rainforest\\\\L1C\\\\S2A_MSIL1C_20230831T002711_N0509_R016_T55KCB_20230831T015620.SAFE\\\\GRANULE\\\\L1C_T55KCB_A042770_20230831T002856\\\\IMG_DATA\\\\T55KCB_20230831T002711_B08.jp2'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,16 +244,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\Tapajos KM67 Mature Forest site\\\\L1C\\\\S2B_MSIL1C_20230819T135709_N0509_R067_T21MYS_20230819T172029.SAFE\\\\DATASTRIP\\\\DS_2BPS_20230819T172029_S20230819T135707\\\\MTD_DS.xml'"
+       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\Robson Creek rainforest\\\\L1C\\\\S2A_MSIL1C_20230831T002711_N0509_R016_T55KCB_20230831T015620.SAFE\\\\DATASTRIP\\\\DS_2APS_20230831T015620_S20230831T002856\\\\MTD_DS.xml'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,16 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\Tapajos KM67 Mature Forest site\\\\L1C\\\\S2B_MSIL1C_20230819T135709_N0509_R067_T21MYS_20230819T172029.SAFE\\\\GRANULE\\\\L1C_T21MYS_A033698_20230819T135707\\\\MTD_TL.xml'"
+       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\Robson Creek rainforest\\\\L1C\\\\S2A_MSIL1C_20230831T002711_N0509_R016_T55KCB_20230831T015620.SAFE\\\\GRANULE\\\\L1C_T55KCB_A042770_20230831T002856\\\\MTD_TL.xml'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,15 +311,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The path to B04 is c:\\Users\\m1865\\Desktop\\DISC\\Sentinel-2 Images Raw\\Tapajos KM67 Mature Forest site\\L2A\\S2B_MSIL2A_20230819T135709_N0509_R067_T21MYS_20230819T181035.SAFE\\GRANULE\\L2A_T21MYS_A033698_20230819T135707\\IMG_DATA\\R10m\\T21MYS_20230819T135709_B04_10m.jp2\n",
-      "The path to B08 is c:\\Users\\m1865\\Desktop\\DISC\\Sentinel-2 Images Raw\\Tapajos KM67 Mature Forest site\\L2A\\S2B_MSIL2A_20230819T135709_N0509_R067_T21MYS_20230819T181035.SAFE\\GRANULE\\L2A_T21MYS_A033698_20230819T135707\\IMG_DATA\\R10m\\T21MYS_20230819T135709_B08_10m.jp2\n"
+      "The path to B04 is c:\\Users\\m1865\\Desktop\\DISC\\Sentinel-2 Images Raw\\Robson Creek rainforest\\L2A\\S2A_MSIL2A_20230831T002711_N0509_R016_T55KCB_20230831T034557.SAFE\\GRANULE\\L2A_T55KCB_A042770_20230831T002856\\IMG_DATA\\R10m\\T55KCB_20230831T002711_B04_10m.jp2\n",
+      "The path to B08 is c:\\Users\\m1865\\Desktop\\DISC\\Sentinel-2 Images Raw\\Robson Creek rainforest\\L2A\\S2A_MSIL2A_20230831T002711_N0509_R016_T55KCB_20230831T034557.SAFE\\GRANULE\\L2A_T55KCB_A042770_20230831T002856\\IMG_DATA\\R10m\\T55KCB_20230831T002711_B08_10m.jp2\n"
      ]
     }
    ],
@@ -347,16 +344,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\Tapajos KM67 Mature Forest site\\\\L2A\\\\S2B_MSIL2A_20230819T135709_N0509_R067_T21MYS_20230819T181035.SAFE\\\\DATASTRIP\\\\DS_2BPS_20230819T181035_S20230819T135707\\\\MTD_DS.xml'"
+       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\Robson Creek rainforest\\\\L2A\\\\S2A_MSIL2A_20230831T002711_N0509_R016_T55KCB_20230831T034557.SAFE\\\\DATASTRIP\\\\DS_2APS_20230831T034557_S20230831T002856\\\\MTD_DS.xml'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +386,7 @@
        "rasterio.io.DatasetReader"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,16 +425,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The EPSG of L1C is 32721\n",
-      "The EPSG of L2A is 32721\n",
-      "The final crs is EPSG:32721\n"
+      "The EPSG of L1C is 32755\n",
+      "The EPSG of L2A is 32755\n",
+      "The final crs is EPSG:32755\n"
      ]
     }
    ],
@@ -455,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -488,24 +485,24 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Tapajos KM67 Mature Forest site</td>\n",
-       "      <td>-2.8567</td>\n",
-       "      <td>-54.9589</td>\n",
-       "      <td>POINT (726891.047 9684044.712)</td>\n",
+       "      <td>Robson Creek rainforest</td>\n",
+       "      <td>-17.127134</td>\n",
+       "      <td>145.607253</td>\n",
+       "      <td>POINT (351839.677 8105850.298)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                              Site  Latitude  Longitude  \\\n",
-       "0  Tapajos KM67 Mature Forest site   -2.8567   -54.9589   \n",
+       "                      Site   Latitude   Longitude  \\\n",
+       "0  Robson Creek rainforest -17.127134  145.607253   \n",
        "\n",
        "                         geometry  \n",
-       "0  POINT (726891.047 9684044.712)  "
+       "0  POINT (351839.677 8105850.298)  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,14 +524,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Site X, Y: 726891.0466288019,9684044.711766005\n"
+      "Site X, Y: 351839.67674787075,8105850.298412036\n"
      ]
     }
    ],
@@ -547,14 +544,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Site falls on the pixel: 1595, 2693\n"
+      "Site falls on the pixel: 9414, 5183\n"
      ]
     }
    ],
@@ -566,14 +563,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The spatial coordinates of the (center) pixel which the site falls on is: 726895.0, 9684045.0\n"
+      "The spatial coordinates of the (center) pixel which the site falls on is: 351835.0, 8105855.0\n"
      ]
     }
    ],
@@ -592,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +767,7 @@
        "1000"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +861,7 @@
        "10000"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,6 +876,46 @@
     "# Get the solar irradiance\n",
     "SolarIrr = float(BS_L1C_dS.find(\"SOLAR_IRRADIANCE\", {\"bandId\": \"7\"}).text)\n",
     "quantification_L1C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.979755714586611"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U_L1C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1041.63"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SolarIrr"
    ]
   },
   {
@@ -1033,7 +1070,16 @@
     }
    ],
    "source": [
-    "offset_L1C"
+    "U_L1C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SolarIrr"
    ]
   },
   {
