--- a/NoteBooks Draft/RZ-GEE Temporal NIRv Rad, CV & Variogram TEST.ipynb
+++ b/NoteBooks Draft/RZ-GEE Temporal NIRv Rad, CV & Variogram TEST.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
        "array([10.29024478, 43.73147835, 10.29163159, 43.73248396])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "[121 rows x 3 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,6 +290,26 @@
     "    # radiance = reflectance * cos(radians(SunZenithAngle)) * solarIrradiance * U / pi\n",
     "    pixelValues_toRad = pixelValues * math.cos(math.radians(L1C_solar_z)) * L1C_solar_B8 * L1C_u_B8 / math.pi\n",
     "    list_L1C_B8_Rad.append(pixelValues_toRad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ee.dictionary.Dictionary at 0x1e54cdebf20>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "value"
    ]
   },
   {
