--- a/NoteBooks/Util - Batch create shp and json.ipynb
+++ b/NoteBooks/Util - Batch create shp and json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,20 +16,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Manual Input"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# The sizes of the output shps\n",
     "shps = [30,100,300,600,900,1200,1800]\n",
-    "# Create also .json files?\n",
+    "# Create also .json files? The .json files will be reprojected into Lat-Lon since they will only be used on Copernicus Browser. \n",
     "bool_JSON = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -91,47 +98,47 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
+       "      <td>ATLAS-Mohammed V New</td>\n",
+       "      <td>33.404814</td>\n",
+       "      <td>-5.101614</td>\n",
+       "      <td>Other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
        "      <td>AT-Mmg</td>\n",
        "      <td>47.316700</td>\n",
        "      <td>10.970300</td>\n",
        "      <td>FLOX</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
        "      <td>BASP</td>\n",
        "      <td>39.049139</td>\n",
        "      <td>-2.075917</td>\n",
        "      <td>HYPERNET</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>BE-Bra</td>\n",
-       "      <td>51.307600</td>\n",
-       "      <td>4.519900</td>\n",
-       "      <td>FLOX-ICOS</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Number              Site   Latitude  Longitude Reference network\n",
-       "0       1              ATGE  52.466778  12.959778          HYPERNET\n",
-       "1       2  ATLAS-Mohammed V  33.406152  -5.103319             Other\n",
-       "2       3            AT-Mmg  47.316700  10.970300              FLOX\n",
-       "3       4              BASP  39.049139  -2.075917          HYPERNET\n",
-       "4       5            BE-Bra  51.307600   4.519900         FLOX-ICOS"
+       "   Number                  Site   Latitude  Longitude Reference network\n",
+       "0       1                  ATGE  52.466778  12.959778          HYPERNET\n",
+       "1       2      ATLAS-Mohammed V  33.406152  -5.103319             Other\n",
+       "2       3  ATLAS-Mohammed V New  33.404814  -5.101614             Other\n",
+       "3       4                AT-Mmg  47.316700  10.970300              FLOX\n",
+       "4       5                  BASP  39.049139  -2.075917          HYPERNET"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_Site = pd.read_excel(cwd + \"//Site - With New (Coordinates Only).xlsx\")\n",
+    "df_Site = pd.read_excel(cwd + \"//Site - With Moved ROI (Coordinates Only).xlsx\")\n",
     "df_Site.head(5)"
    ]
   },
@@ -144,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +239,9 @@
     "        )\n",
     "        gdf_New.to_file(cwd_Images_Processed + \"\\\\\" + temp_SiteName + \"\\\\\" + str(size) + \"m.shp\")\n",
     "        if bool_JSON:\n",
-    "            gdf_New.to_file(cwd_Images_Processed + \"\\\\\" + temp_SiteName + \"\\\\\" + str(size) + \"m.json\", driver = \"GeoJSON\")\n",
+    "            gdf_JSON = gdf_New.copy()\n",
+    "            gdf_JSON = gdf_JSON.to_crs(\"EPSG:4326\")\n",
+    "            gdf_JSON.to_file(cwd_Images_Processed + \"\\\\\" + temp_SiteName + \"\\\\\" + str(size) + \"m.json\", driver = \"GeoJSON\")\n",
     "    print(f\"{temp_SiteName} finishes! \")\n",
     "    clear_output(wait=True)\n",
     "print(\"The creation of all sites has finished successfully!\")"
