--- a/NoteBooks/Main_v2.ipynb
+++ b/NoteBooks/Main_v2.ipynb
@@ -23,6 +23,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Manual Input\n",
+    "Please check these constants before running the code!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -36,53 +44,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set g\n",
-    "g = 4.66"
+    "g = 4.66\n",
+    "# Spatial homogeneity ROIs\n",
+    "distances = [30,100,300,600,900]\n",
+    "# Spatial representativeness ROIs\n",
+    "# Set internal distance\n",
+    "distances_Int = [30,30,100,300,300]\n",
+    "# Set external distance\n",
+    "distances_Ext = [100,300,300,600,900]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read site info"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Number</th>\n",
+       "      <th>Site</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Reference network</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ATGE</td>\n",
+       "      <td>52.466778</td>\n",
+       "      <td>12.959778</td>\n",
+       "      <td>HYPERNET</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>ATLAS-Mohammed V</td>\n",
+       "      <td>33.406152</td>\n",
+       "      <td>-5.103319</td>\n",
+       "      <td>Other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>ATLAS-Mohammed V New</td>\n",
+       "      <td>33.404814</td>\n",
+       "      <td>-5.101614</td>\n",
+       "      <td>Other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>AT-Mmg</td>\n",
+       "      <td>47.316700</td>\n",
+       "      <td>10.970300</td>\n",
+       "      <td>FLOX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>BASP</td>\n",
+       "      <td>39.049139</td>\n",
+       "      <td>-2.075917</td>\n",
+       "      <td>HYPERNET</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Number                                                    51\n",
-       "Site                                                  IT-Mbo\n",
-       "Serial Number (FLOX)                                     NaN\n",
-       "Country                                                Italy\n",
-       "Location                                       Monte Bondone\n",
-       "Latitude                                            46.01468\n",
-       "Longitude                                          11.045831\n",
-       "Priority                                                 NaN\n",
-       "Plant functional type (PFT)                              GRA\n",
-       "Reference network                                       ICOS\n",
-       "Number of components                                     NaN\n",
-       "Reduce ROI size (600 x 600 m)                             No\n",
-       "Move ROI                                                  No\n",
-       "Comments                                                 NaN\n",
-       "PRISMA Availability (900m Buffer ROI Check)             21.0\n",
-       "PRISMA Earliest Date                               1/10/2021\n",
-       "PRISMA Latest Date (Before 2024-06-26)             5/18/2024\n",
-       "Tomi                                               Duplicate\n",
-       "S2 Cloud                                                 NaN\n",
-       "Name: 50, dtype: object"
+       "   Number                  Site   Latitude  Longitude Reference network\n",
+       "0       1                  ATGE  52.466778  12.959778          HYPERNET\n",
+       "1       2      ATLAS-Mohammed V  33.406152  -5.103319             Other\n",
+       "2       3  ATLAS-Mohammed V New  33.404814  -5.101614             Other\n",
+       "3       4                AT-Mmg  47.316700  10.970300              FLOX\n",
+       "4       5                  BASP  39.049139  -2.075917          HYPERNET"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Find the coordinate based on the name of the site in our .csv file\n",
-    "df_Site = pd.read_csv(cwd + \"//Site.csv\")\n",
-    "df_Site.iloc[50,:]"
+    "df_Site = pd.read_excel(cwd + \"//Site - With Moved ROI (Coordinates Only).xlsx\")\n",
+    "df_Site.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Real work begins here"
    ]
   },
   {
@@ -107,7 +193,7 @@
     }
    ],
    "source": [
-    "for index in range(78,79):\n",
+    "for index in range(df_Site.shape[0]):\n",
     "    temp_Site_Name = df_Site['Site'][index]\n",
     "    print(f\"{temp_Site_Name} starts!\")\n",
     "    list_std = []\n",
@@ -120,33 +206,11 @@
     "    list_fitted_model = []\n",
     "    list_empiral_X = []\n",
     "    list_empiral_Y = []\n",
-    "    if os.path.exists(cwd_Images_Processed + \"\\\\\" + temp_Site_Name + \"\\\\NIRv 600m.tif\"):\n",
-    "        bool_600m = True\n",
-    "    else:\n",
-    "        bool_600m = False\n",
-    "    if bool_600m:\n",
-    "        # Set internal distance\n",
-    "        distances_Int = [30,30,100,300,300,300]\n",
-    "        # Set external distance\n",
-    "        distances_Ext = [100,300,300,600,900,1200]\n",
-    "    else:\n",
-    "        # Set internal distance\n",
-    "        distances_Int = [30,30,100,300,300]\n",
-    "        # Set external distance\n",
-    "        distances_Ext = [100,300,300,900,1200]\n",
-    "    # Get the unique distances so we can calculate the variogram first\n",
-    "    list_distances = list(set(distances_Int + distances_Ext))\n",
-    "    list_distances.sort()\n",
-    "    for i in range(len(list_distances)):\n",
-    "        if list_distances[i] == 600:\n",
-    "            if os.path.exists(cwd_Images_Processed + \"\\\\\" + temp_Site_Name + \"\\\\NIRv 600m Spostamento.tif\"):\n",
-    "                print(f\"{temp_Site_Name} has reduced and moved ROI!\")\n",
-    "                img = rio.open(cwd_Images_Processed + \"\\\\\" + temp_Site_Name + \"\\\\NIRv 600m Spostamento.tif\")\n",
-    "            else:\n",
-    "                print(f\"{temp_Site_Name} has reduced ROI!\")\n",
-    "                img = rio.open(cwd_Images_Processed + \"\\\\\" + temp_Site_Name + \"\\\\NIRv 600m.tif\")\n",
+    "    for i in range(len(distances)):\n",
+    "        if temp_Site_Name[-3] == \"New\":\n",
+    "            img = rio.open(cwd_Images_Processed + \"\\\\\" + temp_Site_Name[:-4] + \"\\\\NIRv \" + str(distances[i]) + \"m.tif\")  \n",
     "        else:\n",
-    "                img = rio.open(cwd_Images_Processed + \"\\\\\" + temp_Site_Name + \"\\\\NIRv \" + str(list_distances[i]) + \"m.tif\")  \n",
+    "            img = rio.open(cwd_Images_Processed + \"\\\\\" + temp_Site_Name + \"\\\\NIRv \" + str(distances[i]) + \"m.tif\")  \n",
     "        band = img.read(1).reshape(-1)\n",
     "        temp_std = my_Variogram.calc_STD(band)\n",
     "        temp_cv = my_Variogram.calc_CV(band)\n",
@@ -226,6 +290,27 @@
     "    df_Roman.to_csv(cwd_Images_Processed + \"\\\\\" + temp_Site_Name  + \"\\\\Roman.csv\", index = False)\n",
     "    my_Variogram_Plot.plot_Variogram(list_distances, list_bins, list_fitted_model, list_range, list_sill, list_nugget, list_empiral_X,list_empiral_Y, site_Name_Graph = temp_Site_Name, path_SaveFig = cwd_Images_Processed + \"\\\\\" + temp_Site_Name  + \"\\\\Variogram.png\", bool_SaveFig = True, bool_CloseFig = True)\n",
     "    print(f\"{temp_Site_Name} done!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1234567'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = '1234567890'\n",
+    "m[:-3]"
    ]
   },
   {
