--- a/NoteBooks/R1-NIRv Rad v3.ipynb
+++ b/NoteBooks/R1-NIRv Rad v3.ipynb
@@ -20,6 +20,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Manual Input"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -135,6 +142,13 @@
    "source": [
     "df_Site = pd.read_excel(cwd + \"\\\\Site - With Moved ROI (Coordinates Only).xlsx\")\n",
     "df_Site.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Real work begins"
    ]
   },
   {
